--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <DOCTYPE html>
   <html>
     <head>
-    <a href="index.py">  <button> Press </button></a>
+    <a href="index.py"target="_blank">  Press </a>
       </head>
     </html>
         
